--- a/src/components/shared/Header/Header.css
+++ b/src/components/shared/Header/Header.css
@@ -1,3 +1,28 @@
-.header{
+.header a {
+    text-decoration: none;
+    margin: 8px;
+}
 
+.themeChangeBtn {
+    border: none;
+    display: flex;
+    flex-direction: row;
+    background-color: var(--color-bg-primary);
+}
+
+.theme{
+    font-size: 30px;
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
+    box-shadow: var(--shadow-primary);
+    background: var(--shadow-bg-primary);
+}
+
+
+.theme2 {
+    font-size: 30px;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+    box-shadow: var(--shadow-primary);
+    background: var(--shadow-bg-primary);
 }
