--- a/src/components/shared/SideHeader/SideHeader.css
+++ b/src/components/shared/SideHeader/SideHeader.css
@@ -28,24 +28,25 @@
 .sideHeader a{
     text-decoration: none;
 }
-.hireBtnMain{
-    padding: 5px;
+
+.mainBtn{
+    padding: 10px 25px;
     font-size: 20px;
     font-weight: 500;
     border-radius: 50px;
     box-shadow: var(--shadow-primary);
     background: var(--shadow-bg-primary);
-}
-.hireBtn{
-
     transition: all 0.3s;
     position: relative;
     z-index: 0;
+    display: flex ;
+    align-items: center;
+    justify-content:center ;
 }
-.hireBtn span{
+.mainBtn span{
     transition: all 0.3s;
 }
-.hireBtn::before{
+.mainBtn::before{
     content: '';
     position: absolute;
     bottom: 0;
@@ -66,21 +67,21 @@
     z-index: -1;
 }
 
-.hireBtn:hover span {
+.mainBtn:hover span {
     letter-spacing: 2px;
   }
-  .hireBtn:hover{
+  .mainBtn:hover{
         color: var(--color-body);
   }
 
-  .hireBtn:hover::before {
+  .mainBtn:hover::before {
     opacity: 1; 
     transform: scale(1, 1); 
     background: var(--hover-gradient-light);
     border-radius: 50px;
 
   }
-  .hireBtn::after {
+  .mainBtn::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -90,7 +91,7 @@
     z-index: 1;
     transition: all 0.5s;
 }
-.hireBtn:hover::after {
+.mainBtn:hover::after {
     opacity: 0; 
     transform: scale(0.1, 1);
   }
