--- a/src/components/shared/SideHeader/SideHeader.css
+++ b/src/components/shared/SideHeader/SideHeader.css
@@ -1,4 +1,4 @@
-.sideHeader{
+.sideHeader {
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -9,14 +9,15 @@
 }
 
 
-.sideHeader img{
+.sideHeader img {
     width: 200px;
     margin-top: 10px;
     height: 200px;
     border-radius: 50%;
     border: 5px solid var(--border-color);
 }
-.contactIcon{
+
+.contactIcon {
     font-size: 25px;
     padding: 12px;
     margin: 10px;
@@ -25,11 +26,12 @@
     background: var(--shadow-bg-primary);
     transition: .2s ease-in-out;
 }
-.sideHeader a{
+
+.sideHeader a {
     text-decoration: none;
 }
 
-.mainBtn{
+.mainBtn {
     padding: 10px 15px;
     font-size: 20px;
     font-weight: 500;
@@ -39,14 +41,16 @@
     transition: all 0.3s;
     position: relative;
     z-index: 0;
-    display: flex ;
+    display: flex;
     align-items: center;
-    justify-content:center ;
+    justify-content: center;
 }
-.mainBtn span{
+
+.mainBtn span {
     transition: all 0.3s;
 }
-.mainBtn::before{
+
+.mainBtn::before {
     content: '';
     position: absolute;
     bottom: 0;
@@ -58,10 +62,10 @@
     transition: all 0.3s;
     border-top-width: 1px;
     border-bottom-width: 1px;
-    border-top-style: solid ;
+    border-top-style: solid;
     border-bottom-style: solid;
-    border-top-color: rgba(255,255,255,0.5);
-    border-bottom-color: rgba(255,255,255,0.5);
+    border-top-color: rgba(255, 255, 255, 0.5);
+    border-bottom-color: rgba(255, 255, 255, 0.5);
     transform: scale(0.1, 1);
     color: var(--text-color);
     z-index: -1;
@@ -69,19 +73,24 @@
 
 .mainBtn:hover span {
     letter-spacing: 2px;
-  }
-  .mainBtn:hover{
-        color: var(--color-body);
-  }
+}
 
-  .mainBtn:hover::before {
-    opacity: 1; 
-    transform: scale(1, 1); 
-    background: var(--hover-gradient-light);
+.mainBtn:hover {
+    color: var(--color-bg-primary);
+}
+
+.mainBtn:hover::before {
+    opacity: 1;
+    transform: scale(1, 1);
+    /* background: var(--hover-gradient-light); */
     border-radius: 50px;
+    background-image: linear-gradient(to right, #283048 0%, #859398  51%, #283048  100%);
+             
 
-  }
-  .mainBtn::after {
+     
+}
+
+.mainBtn::after {
     content: '';
     position: absolute;
     bottom: 0;
@@ -91,7 +100,8 @@
     z-index: 1;
     transition: all 0.5s;
 }
+
 .mainBtn:hover::after {
-    opacity: 0; 
+    opacity: 0;
     transform: scale(0.1, 1);
-  }
+}
