--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -20,24 +20,20 @@ border: none !important;
 	transform: translateY(-20px);
 }
 
-.mainCard .btnGroup{
+/* .mainCard .btnGroup{
 	position: absolute;
 	top: 100px;
 	}
 .mainCard:hover .btnGroup{
 	top: 0;
-	}
+	} */
 
 .btnGroup{
-position: relative;
+display: flex;
+justify-content: space-between;
+border-top:1px solid var(--border-color);
 }
-.btn1{
-	position: absolute;
-    right: -40px;
-    top: 0;
-}
-.btn2{
-	position: absolute;
-	left: 170px;
-	top: 0;
+.btnGroup a{
+	text-decoration: none;
+	font-size: 20px;
 }
