--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -7,9 +7,12 @@
     text-decoration: none;
     font-size: 17px;
 }
+.contactIcons a{
+    font-size: 25px;
+}
 .inputBox{
     background: var(--color-bg-primary);
-    box-shadow: var(--input-shadow);
+    box-shadow: var(--btn-primary-shadow-hover);
     border: none;
     margin: 15px 0px;
     padding: 15px 20px;
