--- a/src/pages/Services/Services.css
+++ b/src/pages/Services/Services.css
@@ -10,8 +10,8 @@ padding-bottom: 30px;
 background: var(--shadow-bg-primary);
 box-shadow: var(--shadow-primary);
 overflow: hidden;
-
 border: none !important;
+z-index: 0 !important;
 }
 .mainCard:hover img{
 	transform: translateY(-20px);
@@ -20,18 +20,12 @@ border: none !important;
 	transform: translateY(-20px);
 }
 
-/* .mainCard .btnGroup{
-	position: absolute;
-	top: 100px;
-	}
-.mainCard:hover .btnGroup{
-	top: 0;
-	} */
+
 
 .btnGroup{
 display: flex;
 justify-content: space-between;
-border-top:1px solid var(--border-color);
+width: 100%;
 }
 .btnGroup a{
 	text-decoration: none;
