--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -3,16 +3,15 @@
     align-items: center;
     justify-content: space-around;
     justify-items: center;
-    padding: 20px 0;
+    box-shadow: var(--btn-primary-shadow);
+    border-radius: 10px;
 }
 .resumeHeaderName{
     display: flex !important;
     align-items: center;
     justify-content: space-around;
 }
-.resumeBtn{
 
-}
 .resumeBtn:hover{
     border-radius: 10px;
     background: var(--shadow-bg-primary);
@@ -23,9 +22,7 @@
     background-color: aquamarine;
 }
 .resumeHeader a{
-    background: var(  --color-bg-primary);
     padding: 30px 0px;
-    box-shadow:  var(--header-shadow);
     display: flex !important;
     align-items: center;
     justify-content: space-around;
@@ -34,16 +31,15 @@
     font-weight: 600;
 }
 .resumeHeader a.active{
-background-color: aquamarine !important;
+box-shadow: var(--icon-primary-shadow-hover);
+border-radius: 10px;
 }
 
 .resumeHeader a:hover{
     border-radius: 10px;
-    background: var(--shadow-bg-primary);
-    box-shadow:  var(--shadow-primary);
+    box-shadow:  var(--icon-primary-shadow);
 }
 .resumeHeader a.active:hover{
     border-radius: 10px;
-    background: aquamarine;
-    box-shadow:  var(--shadow-primary);
+    box-shadow: var(--icon-primary-shadow-hover);
 }
