--- a/src/components/shared/SideHeader/SideHeader.css
+++ b/src/components/shared/SideHeader/SideHeader.css
@@ -6,18 +6,23 @@
     justify-content: space-between;
     padding: 20px;
     border-right: 5px solid var(--border-color);
+    overflow-y: auto;
 }
 
 .profilePic{
     width: 200px;
     height: 200px;
+    min-height: 200px;
     margin-top: 10px;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: var(--icon-primary-shadow);
+    overflow: hidden;
+    border: 10px solid var(--color-bg-primary);
 }
+
 .profilePicInner{
     background-image: url('/Images/userImg2.png');
     background-size: cover;
@@ -25,10 +30,12 @@
     width: 180px;
     height: 180px;
     border-radius: 50%;
+    transition: .3s;
 }
 
 .profilePicInner:hover {
   transform: scale(1.2);
+ 
 } 
 
 .contactIcon {
