--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -10,6 +10,10 @@
     display: flex !important;
     align-items: center;
     justify-content: space-around;
+    box-shadow: var(--btn-primary-shadow);
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .resumeBtn:hover{
