--- a/src/pages/Resume/ResumeComponents/Education/EducationSection/EducationSection.css
+++ b/src/pages/Resume/ResumeComponents/Education/EducationSection/EducationSection.css
@@ -1,7 +1,7 @@
 .eduSection{
     border-radius: 10px;
     background: var(--shadow-bg-primary);
-    box-shadow:  var(--shadow-primary);
+    box-shadow:  var(--icon-primary-shadow-hover);
     min-height: 350px;
     overflow: hidden;
 }
