--- a/src/layouts/MainLayout.css
+++ b/src/layouts/MainLayout.css
@@ -1,5 +1,6 @@
 .mainNav{
     height: 100vh;
+    width: 100%;
     overflow-y: auto;
 
 }
@@ -17,8 +18,17 @@
     align-items: center;
     padding: 10px;
 }
-
-
-@media screen {
-    
+.sideNav{
+    display: block;
 }
+
+
+@media screen and (max-width: 990px) {
+    .sideNav {
+        display: none;
+    }
+    .mainNav{
+        display: block;
+        width: 100vw !important;
+    }
+  }
