--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -10,10 +10,11 @@
     display: flex !important;
     align-items: center;
     justify-content: space-around;
-    box-shadow: var(--btn-primary-shadow);
+    box-shadow: var(--icon-primary-shadow);
     border-radius: 10px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 10px 0px;
 }
 
 .resumeBtn:hover{
@@ -22,9 +23,6 @@
     box-shadow:  var(--shadow-primary);
 }
 
-.resumeBtn:active{
-    background-color: aquamarine;
-}
 .resumeHeader a{
     padding: 30px 0px;
     display: flex !important;
