--- a/src/pages/Services/Service/Service.css
+++ b/src/pages/Services/Service/Service.css
@@ -1,5 +1,5 @@
 .service{
-    min-height: 450px !important;
+    min-height: 510px !important;
 }
 
 
@@ -20,5 +20,11 @@
 .cardBorder{
 	padding: 8px;
 	border-radius: 10px;
-	box-shadow: var(  --icon-primary-shadow);
+	/* box-shadow: var(  --icon-primary-shadow); */
+}
+
+.serviceImg{
+	width: 100%;
+	height: 220px;
+	border-radius: 10px;
 }
