--- a/src/pages/Resume/Resume.css
+++ b/src/pages/Resume/Resume.css
@@ -45,3 +45,10 @@ border-radius: 10px;
     border-radius: 10px;
     box-shadow: var(--icon-primary-shadow-hover);
 }
+
+@media only screen and (max-width: 600px) {
+    .resumeHeader a{
+        padding: 12px 0px;
+        font-size: 18px;
+    }
+  }
