--- a/src/pages/Resume/ResumeComponents/Skills/Skills.css
+++ b/src/pages/Resume/ResumeComponents/Skills/Skills.css
@@ -1,7 +1,6 @@
 .skillSection{
-    /* box-shadow: var(--icon-primary-shadow-hover); */
-    /* margin-top: 15px; */
     margin-bottom: 15px;
+    margin-top: 15px;
     padding: 5px 20px;
     border-radius: 10px;
 }
@@ -10,4 +9,8 @@
     box-shadow: var(--icon-primary-shadow);
     background-color: var(--color-bg-primary);
     border-radius: 10px;
+}
+.eachResumeSection{
+    border-bottom: 1px solid rgb(51, 51, 51);
+    padding-bottom: 7px;
 }
