--- a/src/components/shared/SideHeader/SideHeader.css
+++ b/src/components/shared/SideHeader/SideHeader.css
@@ -24,7 +24,7 @@
 }
 
 .profilePicInner{
-    background-image: url('/Images/userImg2.png');
+    background-image: url('/Images/profile.webp');
     background-size: cover;
     background-position: center;
     width: 180px;
