--- a/src/components/shared/Header/Header.css
+++ b/src/components/shared/Header/Header.css
@@ -8,7 +8,6 @@
 
 .navlinkA {
     text-decoration: none;
-    /* box-shadow: var(--icon-primary-shadow); */
     margin-bottom: 15px;
     font-size: 17px;
     padding: 5px 10px;
@@ -21,29 +20,31 @@
 .offcanvas.offcanvas-end.show a {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-decoration: none;
-    padding: 15px;
     background-color: var(--color-bg-primary);
 }
 
 .offcanvas.offcanvas-end.show h6 {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-decoration: none;
     padding: 15px;
     background-color: var(--color-bg-primary);
 }
+.newIcon{
+    justify-content: center !important;
+}
+.navColor{
+    color: var(--text-color);
+}
 
 .navlinkA:hover {
-    /* box-shadow: var(--icon-primary-shadow-hover); */
     color: deepskyblue;
 }
 
 .navlinkA.active {
-    /* box-shadow: var(--btn-primary-shadow-hover); */
-    /* border-radius: 10px; */
     color: deepskyblue;
 }
 
@@ -53,6 +54,9 @@
     box-shadow: var(--icon-primary-shadow-hover);
     border-radius: 50%;
     font-size: 17px;
+}
+.themeToggler{
+    width: 100%;
 }
 
 .navToggle {
@@ -73,3 +77,16 @@
     margin-left: auto;
     background-color: var(--togolarBtn) !important;
 }
+.navIcons{
+    display: none;
+}
+
+@media only screen and (max-width: 600px) {
+    .navlinkA {
+        margin-bottom: 0px;
+        padding: 5px;
+    }
+    .navIcons{
+        display: block;
+    }
+  }
