--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -45,4 +45,33 @@
     .welcome{
         font-size: 12px;
     }
+    .offcanvas{
+        max-width: 80% !important;
+        background-color: var(--color-bg-primary) !important;
+    }
+  }
+
+  @media only screen and (max-width: 400px) {
+    .homeHeading{
+        font-size: 18px;
+        font-weight: bold !important;
+        color: var(--color-heading-bold);
+        margin-bottom: 20px;
+    }
+    .btnWidth{
+        width: 100%;
+    }
+    .description{
+        font-size: 14px !important;
+    }
+    .welcome{
+        font-size: 10px;
+    }
+    .mainBtn{
+        padding: 5px 8px;
+        font-size: 17px;
+    }
+    .offcanvas{
+        max-width: 80% !important;
+    }
   }
