--- a/src/index.css
+++ b/src/index.css
@@ -5,20 +5,21 @@
   --color-body: #878e99;
   --text-color: #3c3e41;
   --border-color: #636363;
-  --togolarBtn:  #ecf0f3;
-  --bar-image: url(/Images/barwhite.webp)
-
+  --togolarBtn: #ecf0f3;
 
   /* 
 
   /* ---------shadow----------- */
 
   --input-shadow: inset 6px 6px 12px #c9cccf, inset -6px -6px 12px #ffffff;
-  --progressbar-shadow: -6px -6px 7px rgba(255, 255, 255, 0.5), 7px 7px 7px rgba(70, 70, 70, 0.12), inset -6px -6px 7px rgba(255, 255, 255, 0.5), inset 7px 7px 7px rgba(70, 70, 70, 0.12);
-  --btn-primary-shadow: 10px 10px 10px -1px rgba(10, 99, 169, 0.16), -10px -10px 10px -1px rgba(255, 255, 255, 0.70);
-  --btn-primary-shadow-hover: inset 10px 10px 10px -1px rgba(10, 99, 169, 0.16), inset -10px -10px 10px -1px rgba(255, 255, 255, 0.70);
-  --icon-primary-shadow-hover: inset -3px -3px 7px #fff, inset 3px 3px 5px rgba(94,104,121,0.712);
-  --icon-primary-shadow:  -3px -3px 7px #fff,  3px 3px 5px rgba(94,104,121,0.712);
+  --progressbar-shadow: -6px -6px 7px rgba(255, 255, 255, 0.5), 7px 7px 7px rgba(70, 70, 70, 0.12),
+    inset -6px -6px 7px rgba(255, 255, 255, 0.5), inset 7px 7px 7px rgba(70, 70, 70, 0.12);
+  --btn-primary-shadow: 10px 10px 10px -1px rgba(10, 99, 169, 0.16),
+    -10px -10px 10px -1px rgba(255, 255, 255, 0.7);
+  --btn-primary-shadow-hover: inset 10px 10px 10px -1px rgba(10, 99, 169, 0.16),
+    inset -10px -10px 10px -1px rgba(255, 255, 255, 0.7);
+  --icon-primary-shadow-hover: inset -3px -3px 7px #fff, inset 3px 3px 5px rgba(94, 104, 121, 0.712);
+  --icon-primary-shadow: -3px -3px 7px #fff, 3px 3px 5px rgba(94, 104, 121, 0.712);
 
   /* 
 --btn-primary-shadow: 10px 10px 10px -1px rgba(10, 99, 169, 0.16),-10px -10px 10px -1px rgba(255, 255, 255, 0.70);
@@ -38,14 +39,17 @@
   /* --shadow-bg-primary: linear-gradient(315deg, #d4d8db, #fdffff);
   --shadow-primary: -5px -5px 51px #c2c5c7, 5px 5px 51px #ffffff; */
   --shadow-bg-primary: linear-gradient(145deg, #e2e8ec, #ffffff);
-  --shadow-primary: 5px 5px 15px #D1D9E6, -5px -5px 15px #ffffff;
+  --shadow-primary: 5px 5px 15px #d1d9e6, -5px -5px 15px #ffffff;
   /* ------------Hover---------- */
   --color-primary-gradient-from: #6a67ce;
   --color-primary-gradient-to: #fc636b;
-  --hover-gradient-light: linear-gradient(145deg, var(--color-primary-gradient-from), var(--color-primary-gradient-to));
+  --hover-gradient-light: linear-gradient(
+    145deg,
+    var(--color-primary-gradient-from),
+    var(--color-primary-gradient-to)
+  );
   /* ------------------------- */
-  --header-shadow: -8px 8px 16px #dee2e4,
-    8px -8px 16px #fafeff;
+  --header-shadow: -8px 8px 16px #dee2e4, 8px -8px 16px #fafeff;
 }
 
 .darkTheme {
@@ -54,22 +58,20 @@
   --color-heading-bold: #ffffff;
   --color-body: #878e99;
   --text-color: #cfcfcf;
-  --bar-image: url(/Images/bardark.webp)
 
   --header-shadow: 8px 8px 16px #1d1f23, -8px -8px 16px #25292d;
   --input-shadow: inset 9px 9px 18px #0d0e10, inset -9px -9px 18px #353a40;
   --progressbar-shadow: inset 9px 9px 18px #0d0e10, inset -9px -9px 18px #353a40;
-  --btn-primary-shadow-hover: inset -2px -2px 6px rgba(255, 255, 255, 0.1), inset 2px 2px 6px rgba(0, 0, 0, 0.8);
+  --btn-primary-shadow-hover: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
+    inset 2px 2px 6px rgba(0, 0, 0, 0.8);
   --btn-primary-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1), 2px 2px 6px rgba(0, 0, 0, 0.8);
-  --icon-primary-shadow-hover: inset -2px -2px 6px rgba(255, 255, 255, 0.1), inset 2px 2px 6px rgba(0, 0, 0, 0.8);
+  --icon-primary-shadow-hover: inset -2px -2px 6px rgba(255, 255, 255, 0.1),
+    inset 2px 2px 6px rgba(0, 0, 0, 0.8);
   --icon-primary-shadow: -2px -2px 6px rgba(255, 255, 255, 0.1), 2px 2px 6px rgba(0, 0, 0, 0.8);
-
 
   /* ------------------------- */
   --imgShadow: #32363b;
   --border-color: #636363;
-
-
 
   --shadow-bg-primary: linear-gradient(145deg, #1e2024, #23272b);
   --shadow-primary: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
