--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,6 @@
 body {
   background-color: var(--color-bg-primary) !important;
   color: var(--text-color) !important;
-  transition: 0.2s all ease-in-out;
+  transition: 0.2s all ease-in-out !important;
   scroll-behavior: smooth;
 }
