--- a/src/pages/RecentProjects/ProjectDetails/ProjectDetails.css
+++ b/src/pages/RecentProjects/ProjectDetails/ProjectDetails.css
@@ -12,3 +12,16 @@
 .likebtn{
     font-size: 20px;
 }
+.tags{
+    margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 400px) {
+    .likebtn{
+        font-size: 17px;
+    }
+    .previewBtn{
+        font-size: 17px !important;
+        color: var(--text-color);
+    }
+  }
