--- a/src/pages/Services/Service/Service.css
+++ b/src/pages/Services/Service/Service.css
@@ -28,3 +28,11 @@
 	height: 220px;
 	border-radius: 10px;
 }
+
+
+
+@media only screen and (max-width: 600px) {
+    .service{
+		min-height: 555px !important;
+	}
+  }
