--- a/src/components/utilities/MainSpinner.css
+++ b/src/components/utilities/MainSpinner.css
@@ -6,3 +6,9 @@
     justify-content: center;
     background: transparent;
 }
+
+@media only screen and (max-width: 400px) {
+    .spinnerMain h3{
+        font-size: 15px;
+    }
+  }
