--- a/src/components/adminPanel/components/Game/Game.css
+++ b/src/components/adminPanel/components/Game/Game.css
@@ -10,8 +10,8 @@
   box-shadow: var(--icon-primary-shadow-hover);
   /* background: var(--shadow-bg-primary); */
 }
-.gameIconName{
-    margin-right: 50px;
+.gameIconName {
+  margin-right: 50px;
 }
 .gameIcon img {
   height: 170px;
@@ -19,9 +19,13 @@
   border-radius: 50%;
   box-shadow: var(--icon-primary-shadow);
 }
+.gameImages {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .gameSection {
   height: 100dvh;
-  width: dvw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,43 +42,132 @@
   border-radius: 10px;
 }
 .scoreContainer {
-  width: 60%;
+  width: 70%;
 }
 
-.gameBtn{
-    display: flex;
+.browseBtn {
+  color: rgb(244, 199, 166);
 }
-.browseBtn{
-    color: rgb(244,199,166);
+.linkBtn {
+  text-decoration: none;
+  padding: 10px 20px;
+  font-size: 20px;
+  box-shadow: var(--btn-primary-shadow);
+  background: var(--shadow-bg-primary);
+  border-radius: 50px;
+  margin-bottom: 15px;
+  color: var(--text-color);
 }
-.linkBtn{
-    text-decoration: none;
-    padding: 10px 40px;
-    font-size: 20px;
-    box-shadow: var(--btn-primary-shadow);
-    background: var(--shadow-bg-primary);
-    border-radius: 50px;
-    margin-bottom: 15px;
-    color: var(--text-color);
+.rulesBtn {
+  border-radius: 50px;
+  font-size: 17px;
+  padding: 5px 20px;
+  color: var(--text-color);
+  box-shadow: var(--btn-primary-shadow);
+  background: var(--shadow-bg-primary);
 }
-.rulesBtn{
-    border-radius: 50px;
-    font-size: 17px;
-    padding: 5px 20px;
-    color: var(--text-color);
-    box-shadow: var(--btn-primary-shadow);
-    background: var(--shadow-bg-primary);
+.playAginBtn {
+  background: var(--shadow-bg-primary);
 }
-.playAginBtn{
-    background: var(--shadow-bg-primary);
+.linkBtn a {
+  color: var(--text-color);
+  text-decoration: none;
 }
-.linkBtn a{
-    color: var(--text-color);
-    text-decoration: none;
-}
-.gameBtnGroup{
-    width: 70%;
+.gameBtnGroup {
+  width: 70%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .gameBtnGroup button {
-    width: 50%;
+  width: 50%;
+}
+.lastImg {
+  margin-right: 0 !important;
+}
+.playAgainBtn{
+    margin-right: 15px;
+}
+
+
+@media only screen and (max-width: 1000px) {
+    .gameBtnGroup {
+        width: 90%;
+      }
+  }
+
+@media only screen and (max-width: 800px) {
+  .scoreContainer {
+    width: 80%;
+  }
+  .gameIcon {
+    height: 160px;
+    width: 160px;
+    margin-right: 30px;
+  }
+  .gameIconName {
+    margin-right: 50px;
+  }
+  .gameIcon img {
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+    box-shadow: var(--icon-primary-shadow);
+  }
+  .gameBtnGroup {
+    width: 100%;
+  }
+  .linkBtn {
+    padding: 10px 20px;
+  }
+
+  @media only screen and (max-width: 650px) {
+    .scoreContainer {
+      width: 90%;
+    }
+    .gameImages {
+      flex-wrap: wrap;
+    }
+    
+    .gameBtnGroup {
+        width: 100%;
+      flex-wrap: wrap;
+    }
+    .linkBtn {
+        padding: 8px 15px;
+      }
+      .gameBtnGroup button {
+        width: 70%;
+      }
+  }
+
+  @media only screen and (max-width: 450px) {
+    .scoreContainer {
+      width: 90%;
+    }
+    .gameIcon {
+      height: 125px;
+      width: 125px;
+      margin-right: 17px;
+    }
+    .gameIconName {
+        margin-right: 17px;
+        font-size: 15px;
+      }
+    .gameIcon img {
+        height: 100px;
+        width: 100px;
+      }
+      
+    .linkBtn {
+      padding: 5px 10px;
+      font-size: 18px;
+    }
+    .rulesBtn {
+      font-size: 14px;
+    }
+    .gameBtnGroup button {
+        width: 70%;
+      }
+  }
 }
